2006-04-18  Atsushi Enomoto <atsushi@ximian.com>

	* NvdlSimplified.cs : according to the section 6.4.10 overriden rules
	  should be filtered out, and rules with cancelNestedAction should be
	  removed *after* filtering overriden rules out.

2006-04-18  Atsushi Enomoto <atsushi@ximian.com>

	* NvdlSimplified.cs, NvdlValidator.cs :
	  fixed several context path related bugs.
	  - Path steps must be trimmed.
	  - MatchPath() always returned false.
	  - nested mode in context is always ignored.

2006-04-11  Atsushi Enomoto <atsushi@ximian.com>

	* NvdlRelaxngSupport.cs : without ReportDetails RELAX NG support
	  supplied too little information on validation error.

2006-04-11  Atsushi Enomoto <atsushi@ximian.com>

	* NvdlFilteredXmlReader.cs : quick fix for r58557; it caused a big
	  NVDL validation breakage (nvdl.nvdl does not validate).
	  Removed unused and insignificant code.
	* NvdlCompileContext.cs : removed unused field.

2006-04-03  Atsushi Enomoto <atsushi@ximian.com>

	due to the request by Brian Rasumussen to report NVDL error details:
	* NvdlFilteredXmlReader.cs : make it as IXmlLineInfo.
	* NvdlValidationGenerator.cs :
	  (NvdlValidationProvider) made validate, schemaType and config as
	  publicly accessible.
	  (NvdlValidatorGenerator) added new HandleError() method that can
	  override error handling.
	* NvdlValidator.cs : use it.
	* NvdlException.cs : added new type NvdlInstanceValidationException
	  that is used to "wrap" actual validation errors to provide
	  NVDL script location information.
	* NvdlRelaxngSupport.cs, NvdlXsdSupport.cs :
	  use those new HandleError() and NvdlInstanceValidationException.

2006-03-23  Atsushi Enomoto <atsushi@ximian.com>

	* NvdlXsdSupport.cs : seems like "XmlReaderSettings.ValidationType =
	  ValidationType.Auto" does not automatically start xsd validation,
	  so set the property explicitly as ValidationType.Schema.

2006-03-03  Atsushi Enomoto <atsushi@ximian.com>
